featured section done

--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
                </div>
               </div>
         </nav>
+        <!-- hero section -->
         <section class=" bg-tertiary mt-8 lg:mt-16">
             <!-- slide-1 -->
             <div class="carousel w-full">
@@ -186,7 +187,28 @@
     </header>
 
     <!-- main section -->
-    <main></main>
+    <main class="container mx-auto">
+      <!-- featured section -->
+       <section class="mt-8 lg:mt-16 flex flex-col justify-center items-center">
+        <div class="flex flex-col justify-center items-center">
+          <h1 class="text-5xl font-semibold">Fetured Bikes In This Year</h1>
+          <p class="text-red-500 text-sm font-semibold">Best bike collection</p>
+          <hr class="w-[50px] border-[1px] border-red-500">
+        </div>
+        <div class="mt-8 lg:mt-16 grid grid-cols-1 lg:grid-cols-3 gap-5 lg:gap-28">
+          <div>
+            <img class="grayscale" src="./images/others/feature-bike.png" alt="">
+          </div>
+          <div>
+            <img src="./images/others/feature-bike.png" alt="">
+          </div>
+          <div>
+            <img class="grayscale" src="./images/others/feature-bike.png" alt="">
+          </div>
+        </div>
+       </section>
+        
+    </main>
 
     <!-- footer section -->
     <footer></footer>
