--- a/index.html
+++ b/index.html
@@ -207,6 +207,66 @@
           </div>
         </div>
        </section>
+
+       <!-- latest news section -->
+        <section class="mt-8 lg:mt-16">
+          <div class="text-center">
+            <h1 class="font-semibold text-5xl">Latest News</h1>
+          </div>
+          <div class="mt-12 grid grid-cols-1 lg:grid-cols-3">
+            <!-- card-1 -->
+            <div>
+              <div class="card glass w-96">
+                <figure>
+                  <img class="pt-5"
+                    src="./images/others/latest1.png"
+                    alt="latest product!" />
+                </figure>
+                <div class="card-body">
+                  <h2 class="card-title">Ducati XDIAVEL S-73</h2>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                  <div class="card-actions">
+                    <button class="btn border-[1px] text-primary border-primary hover:bg-primary hover:text-white">Read More</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- card-2 -->
+            <div>
+              <div class="card glass w-96">
+                <figure>
+                  <img class="pt-5"
+                    src="./images/others/latest2.png"
+                    alt="latest product!" />
+                </figure>
+                <div class="card-body">
+                  <h2 class="card-title">Motorcycles & Scooters</h2>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                  <div class="card-actions">
+                    <button class="btn border-[1px] text-primary border-primary hover:bg-primary hover:text-white">Read More</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- card-3 -->
+            <div>
+              <div class="card glass w-96">
+                <figure>
+                  <img class="pt-5"
+                    src="./images/others/latest3.png"
+                    alt="latest product!" />
+                </figure>
+                <div class="card-body">
+                  <h2 class="card-title">2021 Honda CBR500R</h2>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                  <div class="card-actions">
+                    <button class="btn border-[1px] text-primary border-primary hover:bg-primary hover:text-white">Read More</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
         
     </main>
 
