--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   </head>
   <body class="poppins-font">
     <!-- header section -->
-    <header class="container mx-auto">
+    <header class="w-[90%] lg:container mx-auto">
         <nav>
             <div class="navbar bg-base-100 flex justify-between">
                 <div class="navbar-start">
@@ -187,7 +187,7 @@
     </header>
 
     <!-- main section -->
-    <main class="container mx-auto">
+    <main class="w-[90%] lg:container mx-auto">
       <!-- featured section -->
        <section class="mt-8 lg:mt-16 flex flex-col justify-center items-center">
         <div class="flex flex-col justify-center items-center">
@@ -213,12 +213,12 @@
           <div class="text-center">
             <h1 class="font-semibold text-5xl">Latest News</h1>
           </div>
-          <div class="mt-12 grid grid-cols-1 lg:grid-cols-3">
+          <div class="mt-12 grid grid-cols-1 lg:grid-cols-3 gap-5">
             <!-- card-1 -->
             <div>
-              <div class="card glass w-96">
+              <div class="card glass w-[100%] lg:w-96">
                 <figure>
-                  <img class="pt-5"
+                  <img class="p-5"
                     src="./images/others/latest1.png"
                     alt="latest product!" />
                 </figure>
@@ -233,9 +233,9 @@
             </div>
             <!-- card-2 -->
             <div>
-              <div class="card glass w-96">
+              <div class="card glass w-[100%] lg:w-96">
                 <figure>
-                  <img class="pt-5"
+                  <img class="p-5"
                     src="./images/others/latest2.png"
                     alt="latest product!" />
                 </figure>
@@ -250,9 +250,9 @@
             </div>
             <!-- card-3 -->
             <div>
-              <div class="card glass w-96">
+              <div class="card glass lg:w-96 w-[100%]">
                 <figure>
-                  <img class="pt-5"
+                  <img class="p-5"
                     src="./images/others/latest3.png"
                     alt="latest product!" />
                 </figure>
@@ -267,10 +267,103 @@
             </div>
           </div>
         </section>
+
+        <!-- happy clients section -->
+         <section class="mt-12 lg:mt-24 lg:w-[90%] mx-auto">
+          <h1 class="text-center text-3xl lg:text-5xl font-semibold">Happy <span class="text-primary">Clients says</span></h1>
+          <div class="grid grid-cols-1 lg:grid-cols-3 mt-12 gap-10">
+
+            <!-- 1st card -->
+            <div class="flex flex-col justify-center items-center space-y-7 px-8 py-10 border rounded-md">
+              <div><img src="./images/others/user-1.png" alt="" class="h-40 w-40 border border-dashed"></div>
+
+              <div class="flex flex-col justify-center items-center space-y-4">
+                <p class="text-secondary text-center">Slate helps you see how 
+                  many more days you need 
+                  to work to reach your financial 
+                  goal for the month and year.</p>
+  
+                  <!-- ratings -->
+                  <div class="rating rating-sm">
+                    <input type="radio" name="rating-6" class="mask mask-star-2 bg-orange-400" />
+                    <input
+                      type="radio"
+                      name="rating-6"
+                      class="mask mask-star-2 bg-orange-400"
+                      checked="checked" />
+                    <input type="radio" name="rating-6" class="mask mask-star-2 bg-orange-400" />
+                    <input type="radio" name="rating-6" class="mask mask-star-2 bg-orange-400" />
+                    <input type="radio" name="rating-6" class="mask mask-star-2 bg-orange-400" />
+                  </div>
+                  <!-- ratings ends -->
+                  <p class="font-semibold text-sm text-[#23A6F0]">Regina Miles</p>
+                  <p class="font-semibold text-sm text-[#252B42]">Banker</p>
+              </div>
+            </div>
+
+            <!-- 2nd card -->
+            <div class="flex flex-col justify-center items-center space-y-7 px-8 py-10 border rounded-md">
+              <div><img src="./images/others/user-2.png" alt="" class="w-40 h-40 border border-dashed"></div>
+
+              <div class="flex flex-col justify-center items-center space-y-4">
+                <p class="text-secondary text-center">Slate helps you see how 
+                  many more days you need 
+                  to work to reach your financial 
+                  goal for the month and year.</p>
+  
+                  <!-- ratings -->
+                  <div class="rating rating-sm">
+                    <input type="radio" name="rating-6" class="mask mask-star-2 bg-orange-400" />
+                    <input
+                      type="radio"
+                      name="rating-6"
+                      class="mask mask-star-2 bg-orange-400"
+                      checked="checked" />
+                    <input type="radio" name="rating-6" class="mask mask-star-2 bg-orange-400" />
+                    <input type="radio" name="rating-6" class="mask mask-star-2 bg-orange-400" />
+                    <input type="radio" name="rating-6" class="mask mask-star-2 bg-orange-400" />
+                  </div>
+                  <!-- ratings ends -->
+                  <p class="font-semibold text-sm text-[#23A6F0]">Regina Miles</p>
+                  <p class="font-semibold text-sm text-[#252B42]">Banker</p>
+              </div>
+            </div>
+
+             <!-- 3rd card -->
+             <div class="flex flex-col justify-center items-center space-y-7 px-8 py-10 border rounded-md">
+              <div><img src="./images/others/user-3.png" alt="" class="w-40 h-40 border border-dashed"></div>
+
+              <div class="flex flex-col justify-center items-center space-y-4">
+                <p class="text-secondary text-center">Slate helps you see how 
+                  many more days you need 
+                  to work to reach your financial 
+                  goal for the month and year.</p>
+  
+                  <!-- ratings -->
+                  <div class="rating rating-sm">
+                    <input type="radio" name="rating-6" class="mask mask-star-2 bg-orange-400" />
+                    <input
+                      type="radio"
+                      name="rating-6"
+                      class="mask mask-star-2 bg-orange-400"
+                      checked="checked" />
+                    <input type="radio" name="rating-6" class="mask mask-star-2 bg-orange-400" />
+                    <input type="radio" name="rating-6" class="mask mask-star-2 bg-orange-400" />
+                    <input type="radio" name="rating-6" class="mask mask-star-2 bg-orange-400" />
+                  </div>
+                  <!-- ratings ends -->
+                  <p class="font-semibold text-sm text-[#23A6F0]">Regina Miles</p>
+                  <p class="font-semibold text-sm text-[#252B42]">Banker</p>
+              </div>
+            </div>
+          </div>
+         </section>
         
     </main>
+   
 
     <!-- footer section -->
-    <footer></footer>
+    <footer>
+    </footer>
   </body>
 </html>
