--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 clifford: '#da373d',
                 'primary': '#E76F51',
                 'secondary': '#6C6C6C',
+                'footer': '#0B0D17',
                 'tertiary':'rgba(231, 111, 81, 0.1)'
               }
             }
@@ -358,12 +359,90 @@
             </div>
           </div>
          </section>
+
+         <!-- faq section -->
+          <section class="mt-12 lg:mt-24 lg:w-[90%] mx-auto">
+            <h1 class="text-3xl lg:text-5xl font-semibold text-center mb-12">Frequently Asked <span class="text-primary">Questions</span></h1>
+              <div class="flex flex-col lg:flex-row justify-between">
+                <!-- img content -->
+                 <div class="w-[100%] lg:w-[45%] border border-dashed"><img class="w-[100%]" src="./images/others/faq.png" alt=""></div>
+
+                 <!-- accordion  -->
+                  <div class="w-[100] lg:w-[45%] space-y-4">
+
+                    <div class="collapse collapse-arrow border border-dashed">
+                      <input type="radio" name="my-accordion-2" checked="checked" />
+                      <div class="collapse-title text-xl font-medium">What are the most important things I should
+                        know about riding a bike?</div>
+                      <div class="collapse-content">
+                        <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider. </p>
+                      </div>
+                    </div>
+                    <div class="collapse collapse-arrow border border-dashed">
+                      <input type="radio" name="my-accordion-2" />
+                      <div class="collapse-title text-xl font-medium">How can I tell if my helmet is old and I need a 
+                        new one?</div>
+                      <div class="collapse-content">
+                        <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider. </p>
+                      </div>
+                    </div>
+                    <div class="collapse collapse-arrow border border-dashed">
+                      <input type="radio" name="my-accordion-2" />
+                      <div class="collapse-title text-xl font-medium">My bike has been in storage is it safe to ride?</div>
+                      <div class="collapse-content">
+                        <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider. </p>
+                      </div>
+                    </div>
+                    <div class="collapse collapse-arrow border border-dashed">
+                      <input type="radio" name="my-accordion-2" />
+                      <div class="collapse-title text-xl font-medium">My bike has been in storage is it safe to ride?</div>
+                      <div class="collapse-content">
+                        <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider. </p>
+                      </div>
+                    </div>
+                    <div class="collapse collapse-arrow border border-dashed">
+                      <input type="radio" name="my-accordion-2" />
+                      <div class="collapse-title text-xl font-medium">My bike has been in storage is it safe to ride?</div>
+                      <div class="collapse-content">
+                        <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider. </p>
+                      </div>
+                    </div>
+                  </div>
+              </div>
+          </section>
         
     </main>
    
 
     <!-- footer section -->
-    <footer>
+    <footer class="bg-footer mt-12 lg:mt-24 text-white py-14 ">
+       <section class="w-[90%] lg:container mx-auto ">
+        <!-- left side -->
+           <div class="flex flex-col lg:flex-row items-start justify-between lg:items-center space-y-4">
+           <div class="space-y-6">
+            <div class="flex gap-6">
+              <h6 class="">Download Now</h6>
+              <p class="">License</p>
+            </div>
+            <ul class="flex gap-6 flex-wrap">
+              <li>About</li>
+              <li>Features</li>
+              <li>Pricing</li>
+              <li>Careers</li>
+              <li>Help</li>
+              <li>Privacy Policy</li>
+            </ul>
+            <p class="text-sm ">© 2020 bike. All rights reserved</p>
+           </div>
+           <div class="space-y-6">
+            <h6 class="text-lg ">Get the App</h6>
+            <div><img src="./images/others/ios.png" class="h-10" alt=""></div>
+            <div><img src="./images/others/android.png" class="h-10" alt=""></div>
+          </div>
+          </div>
+         <!-- right side -->
+         
+       </section>
     </footer>
   </body>
 </html>
